style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-size: 16px;
}

ul,
li {
  list-style-type: none;
}

.text-black {
  color: black;
  font-weight: 700;
  font-size: 1.1rem;
}

.max-w-total {
  max-width: 1320px;
}

/* =============================================
=            GLOBAL SETTINGS            =
============================================= */

.black-font-big {
  font-size: 1.25rem;
  font-weight: bold;
  color: black;
  line-height: 1.6rem;
}

.black-font-opinion {
  font-size: 1.1rem;
  font-weight: bold;
  color: black;
  line-height: 1.6rem;
}

.black-font-medium {
  font-size: 0.81rem;
  font-weight: bold;
  color: black;
  line-height: 20px;
}

.story-h1 {
  font-size: 1rem;
  color: #9a9a9a;
  font-weight: 600;
}

.small-font {
  font-size: 0.9rem;
  font-family: Arial, Helvetica, sans-serif;
}

.medium-font {
  font-size: 1.6rem;
}

.primary-font {
  font-family: "Roboto Condensed", Arial, Helvetica, sans-serif;
}

.text-font {
  font-family: "Archivo", sans-serif;
}

/* =====  End of GLOBAL SETTINGS  ====== */

/* =============================================
                    HEADER
    ============================================= */

.header-logo {
  width: 132px;
  height: 20px;
}

.bg-red-news {
  background: #f72210;
}

.btn-warning {
  font-size: 1rem;
  background-color: #ffe400;
  font-weight: bold;
  padding: 2px 3px;
  border: none;
  border-radius: 12px;
  margin: 0 7px;
  line-height: 16px;
}

.fa-user,
.fa-bars {
  color: #fdc8c3;
}

.rectangle {
  right: 0;
  top: 0;
  width: 80px;
  height: 18px;
}

.triangle {
  right: 80px;
  top: 0;
  width: 0;
  height: 0;
  border-top: 18px solid #f72210;
  border-left: 20px solid transparent;
}

/* =============================================
=            FEATURE STORIES            =
============================================= */

.art-story a {
  font-size: 1.2rem;
  color: black;
  line-height: 1.5rem;
}

.art-story p {
  font-size: 0.81rem;
  line-height: 1.125rem;
}

/* =====  End of FEATURE STORIES  ====== */

/* =============================================
=            THE DEBATE            =
============================================= */

.border-top-gross {
  border-top: 4px solid #d9d9d9;
}

.border-bottom-gross {
  border-bottom: 4px solid #d9d9d9;
}

.border-top-double {
  border-top: 3px double #d9d9d9;
}

.border-top-double::before {
  content: "vs";
  font-size: 1.2rem;
  font-weight: bold;
  background-color: black;
  color: #d6d6d6;
  border-radius: 50%;
  position: relative;
  display: block;
  bottom: 2.2rem;
  left: 50%;
  padding: 0.1rem 0.3rem;
}

/* =====  End of THE DEBATE  ====== */

/* =============================================
=            SPONSORS            =
============================================= */

.text-form-size {
  font-size: 1.187rem;
}

/* =====  End of SPONSORS  ====== */

/* =============================================
=            MORE STORIES SECTION            =
============================================= */

.font-title-more-stories {
  font-family: "Roboto Condensed", Arial, Helvetica, sans-serif;
  font-size: 1.05rem;
  color: black;
  font-weight: 700;
}

.font-p-more-stories {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 0.81rem;
  color: black;
}

/* =====  End of MORE STORIES SECTION  ====== */

/* =============================================
=            Section comment block            =
============================================= */

.font-p-my-turn {
  font-family: "Roboto Condensed", Arial, Helvetica, sans-serif;
  font-size: 1rem;
  color: #818181;
}

/* =====  End of Section comment block  ====== */

/* =============================================
=            IN THE MAGAZINE            =
============================================= */

.after-cover-text {
  color: #f72210;
  font-weight: bold;
}

/* =====  End of IN THE MAGAZINE  ====== */

/* =============================================
=            EDITOR'S PICK            =
============================================= */

.editor-pick-text {
  font-size: 0.81rem;
  line-height: 18px;
  color: #555;
}

/* =====  End of EDITOR'S PICK  ====== */

/* =============================================
=            U.S.            =
============================================= */

.black-font-news {
  font-size: 1rem;
  font-weight: 700;
  line-height: 1rem;
  color: black;
}

/* =====  End of U.s.  ====== */

.font-text-us {
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.2rem;
  color: black;
  font-family: "roboto condensed", Arial, Helvetica, sans-serif;
}

/* =============================================
=           SUBSCRIBE            =
============================================= */

.img-sub-1 {
  left: 0;
  top: 0;
}

.img-sub-2 {
  left: 40px;
  top: 10px;
}

/* =====  End of Section comment block  ====== */

/* =============================================
=            Section NEWSLETTER            =
============================================= */

/* =====  End of Section NEWSLETTER  ====== */

/* =============================================
=            FOOTER            =
============================================= */

.subs-btn {
  font-size: 1.2rem;
}

.subs-btn-2 {
  font-size: 1.2rem;
  overflow: hidden;
  text-overflow: ellipsis;
  height: 30px;
}

.login-nav,
.offer-nav {
  display: none;
}

.smaller-none {
  display: none;
}

@media (max-width: 768px) {
  .fixed-sm-top {
    position: fixed;
    top: 0;
    z-index: 999;
  }
}

/* =====  End of FOOTER  ====== */

/* =============================================
=            Media query min-width = 768px            =
============================================= */

@media (min-width: 768px) {
  .login-nav,
  .offer-nav {
    display: initial;
  }

  .user-nav {
    display: none;
    visibility: hidden;
  }

  .first-sponsor,
  .second-sponsor {
    display: none;
  }

  .medium-none {
    display: none;
  }

  .medium-show {
    display: initial;
  }
}

/* =====  End of Media query min-width = 768px  ====== */

/* =============================================
=            Media Query min-widh 992px            =
============================================= */

@media (min-width: 992px) {
  .big-show {
    display: inherit;
  }

  .big-none {
    display: none;
  }

  .header-logo {
    width: 396px;
    height: 60px;
  }

  .big-img-magazine {
    height: 250px;
  }

  .btn-down {
    display: flex;
    flex-direction: column;
  }
}

/* =====  End of Media Query min-widh 992px  ====== */

